--- a/src/style.scss
+++ b/src/style.scss
@@ -66,4 +66,312 @@ $defaultColor:  rgb(214, 207, 196);
         
     }
 }
+
+
+
+.navbar{
+    .container{
+        padding: 10px 0px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .logo{}
+        .links{
+            display:flex;
+            align-items: center;
+            gap:10px;
+        
+        h6{
+            font-size: 16px;
+            font-weight: 300;
+        }
+
+        span{
+            cursor: pointer;
+        }
+
+        .write{
+            background-color: $defaultColor;
+            padding-left: 10px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            font-weight: 300;
+            border: 1px solid white;
+
+            &:hover{
+                color: rgb(186, 163, 129);
+                background-color: white;
+                border: 1px solid rgb(186, 163, 129);
+                
+            }
+        }
+    }
+}
+}
+
+    //FOOTER
+footer{
+    margin-top: 100px;
+    padding: 20px;
+    background-color: $defaultColor;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 12px;
+}
+
+//HOME
+
+.home{
+    .posts{
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 150px;
+    
+
+    .post{
+        display: flex;
+        gap:100px;
+
+        &:nth-child(2n+1){
+            flex-direction: row-reverse;
+        }
+    
+    .img{
+        flex: 1;
+        position: relative;
+
+        // &::after{
+        //     content: '';
+        //     width: 100%;
+        //     height: 100%;
+        //     background-color: $defaultColor;
+        //     position: absolute;
+        //     top: 20px;
+        //     left: -20px;
+        //     z-index: -1;
+        // }
+
+        img{
+            width: 100%;
+            max-height: 400px;
+            object-fit: cover;
+        }
+    }
+
+        .content{
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+
+            h1{
+                font-size: 48px;
+            }
+
+            p{
+                font-size: 18px;
+            }
+
+            button{
+                width: max-content;
+                padding: 10px 20px;
+                border: none;
+                cursor: pointer;
+                background-color: white;
+                border: 1px solid rgb(186, 163, 129);
+                color: rgb(186, 163, 129);
+
+                &:hover{
+                    border: 1px solid white;
+                    background-color: $defaultColor;
+                    color:black;
+                }
+            }
+        }
+    }
+    }
+}
+
+//SINGLE
+
+.single{
+    display: flex;
+    gap:50px;
+
+    .content{
+        flex:5;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        img{
+            width:100%;
+            height: 300px;
+            object-fit: cover;
+        }
+        
+
+        .user{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 14px;
+            img{
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            span{
+                font-weight: bold;
+            }
+        }
+
+        .edit{
+            display: flex;
+            gap: 5px;
+
+            button{
+                cursor: pointer;
+            }
+        }
+        h1{
+            font-size: 42px;
+            color: #333
+        }
+
+        p{
+            text-align: justify;
+            line-height: 30px;
+        }
+    }
+    .menu{
+        flex:2;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+
+        h1{
+            font-size: 20px;
+            color: #555;
+        }
+
+        .post{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            img{
+                width: 100%;
+                height: 200%;
+                object-fit: cover;
+            }
+
+            h2{
+                color: #555;
+            }
+
+            button{
+                width: max-content;
+                padding: 7.5px 15px;
+                border: none;
+                cursor: pointer;
+                background-color: white;
+                border: 1px solid rgb(186, 163, 129);
+                color: rgb(186, 163, 129);
+
+                &:hover{
+                    border: 1px solid white;
+                    background-color: $defaultColor;
+                    color:black;
+                }
+            }
+        }
+    }
+}
+
+//WRITE
+
+.write{
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+
+    .content{
+        flex:5;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        input{
+            padding: 10px;
+            border: 1pxsolid lightgrey;
+        }
+
+        .editorContainer{
+            height: 300px;
+            overflow: scroll;
+            border: 1pxsolid lightgrey;
+        }
+
+        .editor{
+            height: 100%;
+            border: none;
+        }
+    }
+
+    .menu{
+        flex:2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        
+        .item{
+            border: 1px solid lightgrey;
+            padding: 10px;
+            flex:1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 12px;
+            color: #555;
+        }
+
+        h1{
+            font-size: 20px;
+        }
+
+        .file{
+            text-decoration: underline;
+            cursor: pointer;
+        }
+        .buttons{
+            display: flex;
+            justify-content: space-between;
+
+            :first-child{
+                cursor: pointer;
+                color: rgb(186, 163, 129);
+                background-color: white;
+                border: 1px solid rgb(186, 163, 129);
+                padding: 3px;
+            }
+            :last-child{
+                cursor: pointer;
+                color: white;
+                background-color: rgb(186, 163, 129);
+                border: 1px solid rgb(186, 163, 129);
+                padding: 3px;
+            }
+        }
+    }
+}
 }
