--- a/src/style.scss
+++ b/src/style.scss
@@ -279,7 +279,7 @@ footer{
                 color: #555;
             }
 
-            button{
+            a{
                 width: max-content;
                 padding: 7.5px 15px;
                 border: none;
